--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,129 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "extends": [
-    "prettier",
-    "eslint:recommended",
-    "plugin:import/recommended",
-    "plugin:jsdoc/recommended",
-    "plugin:@typescript-eslint/recommended"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  },
-  "plugins": ["@typescript-eslint", "prettier", "import", "jsdoc"],
-  "rules": {
-    "indent": ["error", 4],
-    "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "single"],
-    "semi": ["error", "always"]
-  }
+  "root": true,
+  "ignorePatterns": ["src/**/*"],
+  "overrides": [
+    {
+      "files": ["*.ts"],
+      "extends": [
+        "prettier",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:jsdoc/recommended",
+        "plugin:import/recommended",
+        "plugin:import/typescript"
+      ],
+      "plugins": ["@typescript-eslint", "import", "jsdoc", "prettier", "jest"],
+      "parser": "@typescript-eslint/parser",
+      "parserOptions": {
+        "project": ["tsconfig.json"],
+        "createDefaultProgram": true
+      },
+      "settings": {
+        "import/parsers": {
+          "@typescript-eslint/parser": [".ts"]
+        },
+        "import/resolver": {
+          "typescript": {
+            "project": "./",
+            "alwaysTryTypes": true
+          }
+        },
+        "import/ignore": ["lodash"]
+      },
+      "rules": {
+        "indent": ["error", 2],
+        "linebreak-style": ["error", "unix"],
+        "quotes": ["error", "single"],
+        "semi": ["error", "always"],
+        "@typescript-eslint/member-delimiter-style": [
+          "error",
+          {
+            "multiline": {
+              "delimiter": "semi",
+              "requireLast": true
+            },
+            "singleline": {
+              "delimiter": "semi",
+              "requireLast": false
+            }
+          }
+        ],
+        "@typescript-eslint/naming-convention": [
+          "error",
+          {
+            "selector": "variable",
+            "format": ["camelCase", "UPPER_CASE", "PascalCase"]
+          }
+        ],
+        "@typescript-eslint/array-type": "error",
+        "@typescript-eslint/await-thenable": "error",
+        "@typescript-eslint/consistent-type-definitions": "error",
+        "@typescript-eslint/member-ordering": "error",
+        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/no-empty-interface": "error",
+        "@typescript-eslint/no-inferrable-types": "error",
+        "@typescript-eslint/no-misused-new": "error",
+        "@typescript-eslint/no-non-null-assertion": "error",
+        "@typescript-eslint/no-shadow": ["error"],
+        "@typescript-eslint/no-unused-vars": "error",
+        "@typescript-eslint/no-use-before-define": "error",
+        "@typescript-eslint/prefer-function-type": "error",
+        "@typescript-eslint/semi": ["error", "always"],
+        "@typescript-eslint/type-annotation-spacing": "error",
+        "@typescript-eslint/unified-signatures": "error",
+        "jsdoc/require-returns": "off",
+        "jsdoc/require-param-type": "off"
+      },
+      "env": {
+        "browser": true,
+        "es2021": true,
+        "node": true,
+        "jest": true
+      }
+    },
+    {
+      "files": ["*.js"],
+      "parserOptions": {
+        "ecmaVersion": 8,
+        "sourceType": "module"
+      },
+      "extends": [
+        "prettier",
+        "eslint:recommended",
+        "plugin:jsdoc/recommended",
+        "plugin:import/errors",
+        "plugin:import/warnings"
+      ],
+      "rules": {
+        "arrow-parens": ["error", "as-needed"],
+        "linebreak-style": ["error", "unix"],
+        "quotes": ["error", "single", { "avoidEscape": true }],
+        "array-bracket-spacing": [
+          "error",
+          "never",
+          {
+            "objectsInArrays": false,
+            "arraysInArrays": false
+          }
+        ],
+        "jsdoc/no-types": 0,
+        "import/order": [
+          "error",
+          {
+            "newlines-between": "always",
+            "alphabetize": {
+              "order": "asc"
+            }
+          }
+        ]
+      },
+      "plugins": ["import", "jsdoc", "prettier", "jest"],
+      "env": {
+        "es6": true,
+        "browser": true,
+        "node": true,
+        "jest": true
+      }
+    }
+  ]
 }
