--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,14 @@
         "plugin:import/recommended",
         "plugin:import/typescript"
       ],
-      "plugins": ["@typescript-eslint", "import", "jsdoc", "prettier", "jest"],
+      "plugins": [
+        "@typescript-eslint",
+        "import",
+        "jsdoc",
+        "tsdoc",
+        "prettier",
+        "jest"
+      ],
       "parser": "@typescript-eslint/parser",
       "parserOptions": {
         "project": ["tsconfig.json"],
@@ -72,7 +79,8 @@
         "@typescript-eslint/type-annotation-spacing": "error",
         "@typescript-eslint/unified-signatures": "error",
         "jsdoc/require-returns": "off",
-        "jsdoc/require-param-type": "off"
+        "jsdoc/require-param-type": "off",
+        "tsdoc/syntax": "warn"
       },
       "env": {
         "browser": true,
