--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.23.1",
     "eslint-plugin-jest": "^24.3.6",
-    "eslint-plugin-jsdoc": "^34.2.2",
+    "eslint-plugin-jsdoc": "^34.6.1",
     "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-tsdoc": "^0.2.14",
     "jest-cli": "^26.6.3",
     "jest-jasmine2": "^26.6.3",
     "jest-snapshot": "^26.6.2",
@@ -27,6 +28,7 @@
     "prettier-plugin-sh": "^0.6.1",
     "ts-node": "^9.1.1",
     "tslib": "^2.2.0",
+    "typedoc": "^0.20.36",
     "typescript": "^4.2.4"
   }
 }
