--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
         "plugin:@typescript-eslint/recommended",
         "plugin:jsdoc/recommended",
         "plugin:import/recommended",
-        "plugin:import/typescript"
+        "plugin:import/typescript",
+        "plugin:jest/recommended"
       ],
       "plugins": [
         "@typescript-eslint",
@@ -86,7 +87,8 @@
         "browser": true,
         "es2021": true,
         "node": true,
-        "jest": true
+        "jest": true,
+        "jest/globals": true
       }
     },
     {
@@ -100,8 +102,10 @@
         "eslint:recommended",
         "plugin:jsdoc/recommended",
         "plugin:import/errors",
-        "plugin:import/warnings"
+        "plugin:import/warnings",
+        "plugin:jest/recommended"
       ],
+      "plugins": ["import", "jsdoc", "prettier", "jest"],
       "rules": {
         "arrow-parens": ["error", "as-needed"],
         "linebreak-style": ["error", "unix"],
@@ -125,12 +129,12 @@
           }
         ]
       },
-      "plugins": ["import", "jsdoc", "prettier", "jest"],
       "env": {
         "es6": true,
         "browser": true,
         "node": true,
-        "jest": true
+        "jest": true,
+        "jest/globals": true
       }
     }
   ]
