--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-jsdoc": "^34.6.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-tsdoc": "^0.2.14",
+    "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
     "jest-jasmine2": "^26.6.3",
     "jest-snapshot": "^26.6.2",
@@ -30,5 +31,8 @@
     "tslib": "^2.2.0",
     "typedoc": "^0.20.36",
     "typescript": "^4.2.4"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
