--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Kaspar Vollenweider <vok@panter.ch>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "@types/mocha": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/experimental-utils": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
@@ -27,6 +29,7 @@
     "jest-when": "^3.3.1",
     "prettier": "^2.3.0",
     "prettier-plugin-sh": "^0.6.1",
+    "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "tslib": "^2.2.0",
     "typedoc": "^0.20.36",
