--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "lib": ["es2020", "dom"],
-    "module": "commonjs",
+    "module": "es2020",
     "target": "es2020",
     "moduleResolution": "node",
     "allowJs": true,
@@ -13,5 +13,6 @@
     "esModuleInterop": true,
     "typeRoots": ["./node_modules/@types", "./typings"]
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "docs/**/*"],
+  "include": ["src/**/*"]
 }
